Merge JavaFX GUI Updates from into FuzzyBuilder
Refactoring, better camera zoom/pan